# CoatCat

./: CMakeLists.txt
coatCat/: Dialogue.cpp  Element.hpp  PointClick.cpp  Scene.hpp
src/: Scene.cpp  Scene.hpp  main.cpp
tests/: main.cpp
